--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,17 @@ a {
 
 /* Nav Menu */
 
-.heading { 
+.heading a { 
   font-size: 16px;
+  color: #2F3D31;
   text-transform: uppercase;
   letter-spacing: 5px;
   margin-top: 50px;
-  border: 1px solid;
+  border: 1px solid #2F3D31;
   padding: 12px;
   display: inline-block;
 }
+
 
 nav ul {
   list-style: none;
@@ -57,6 +59,7 @@ nav a {
 .container {
   background: #fff;
   padding: 15px;
+  margin:0 auto;
 }	
 
 /* Footer */
