--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,12 @@ nav a {
 /* Content */
 
 .content { 
-  text-align: left; 
+  text-align: left;
+  float: left;
+}
+
+.content li{ 
+  margin: 0 0 5px 0;
 }
 
 .container {
@@ -64,7 +69,7 @@ nav a {
 
 /* Footer */
 .footer {
-  margin: 50px 20px;
+  margin: 60px 0  40px;
 }
 
 @media (min-width: 550px) {
