--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ nav a {
   margin: 60px 0  40px;
 }
 
+.links {
+  padding: 10px;
+}
+
 @media (min-width: 550px) {
 
   nav li {
@@ -81,7 +85,6 @@ nav a {
 
   nav a {
     padding: 5px;
-    width: 60px;
   }
 }
 
