--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,10 @@ nav a {
 
 .container {
   background: #fff;
-  position: absolute; 
   margin: 0 auto;
   height: 100%;
+  margin-top: 30px;
+  max-width: 800px;
 }	
 
 .bigbutton a{
@@ -82,14 +83,27 @@ nav a {
   display: block;
   text-align: center;
   height: 100%;
-  width: 30%;
+  max-width: 270px;
   
+}
+
+/* Contact Form */
+input[type="email"], input[type="text"],textarea {
+  width: 350px;
+}
+
+textarea {
+  height: 100px;
+}
+
+.contact {
+  text-align: center; 
+  margin: 0 25px; 
 }
 
 /* Footer */
 .footer {
-  padding: 50px 0  40px;
-  position: absolute; 
+  padding: 25px 0px;
   bottom: 0; 
 }
 
