--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,27 @@ a:hover {
   color: #fce88d;
 }
 
+/* Fade */
+.hvr-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
+  background-color: #fce88d;
+  color: #fff;
+}
+
 
 /* Nav Menu */
 
@@ -36,7 +57,7 @@ a:hover {
 
 .header a:hover {
   border: 1px solid #fce88d;
-  color: #2F3D31;
+  color: #fff;
   text-decoration: none;
 }
 
